# romfs

./: .editorconfig  .gitignore  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/romfs/: __init__.py  cli.py  diff.py  errors.py  format.py  nodes.py  reader.py  writer.py
tests/: __init__.py  test_romfs.py  test_version.py
tests/fixtures/new/etc/: notes.txt
tests/fixtures/new/etc/init.d/: rcS
tests/fixtures/new/var/: run
tests/fixtures/old/etc/: old.conf
tests/fixtures/old/etc/init.d/: rcS
