# SPDX-License-Identifier: Apache-2.0
# Copyright (c) 2026 Junbo Zheng

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "romfs"
dynamic = ["version"]
description = "Pure-Python reader and writer for Linux romfs (-rom1fs-) filesystem images."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Junbo Zheng", email = "Junbo-Zheng@users.noreply.github.com" },
]
keywords = ["romfs", "rom1fs", "filesystem", "image", "embedded", "initrd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "build",
    "twine",
]

[project.scripts]
romfs = "romfs.cli:main"

[project.urls]
Homepage = "https://github.com/Junbo-Zheng/romfs"
Issues = "https://github.com/Junbo-Zheng/romfs/issues"

# Single source of truth for the version: read it from __init__.py so the
# number lives in exactly one place (no pyproject/__init__ drift on bumps).
[tool.hatch.version]
path = "src/romfs/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/romfs"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
# Never recurse into the fixture trees — they hold committed sample files
# (incl. symlinks) for the CLI tests to read at runtime, not test modules.
norecursedirs = ["fixtures"]
# Import the package straight from src/ so `pytest` runs against the working
# tree with no build/install step, and always shadows any site-packages copy.
pythonpath = ["src"]
